syntax = "proto3";

package bytebase.v1;
option go_package = "generated-go/v1";

message MigrationDetail {
  MigrationType migration_type = 1;

  string database_name = 2;

  string environment_name = 3;

  string statement = 4;

  string schema_version = 5;
}

message IssueCreate {
  string project_key = 1;

  string name = 2;

  string type = 3;

  string description = 4;

  repeated MigrationDetail migration_list = 5;
}

enum MigrationType {
  BASELINE = 0;

  MIGRATE = 1;

  MIGRATE_SDL = 2;

  BRANCH = 3;

  DATA = 4;
}
